# rswitch

./: README.md  default.nix  pyproject.toml  requirements.txt  rswitch.py
nix/: sources.json
