[tool.poetry]
name = "rswitch"
version = "1.2.8"
description = ""
authors = ["Xavier Maillard <xavier.maillard@orange.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "7.1"
selenium = "3.141.0"
requests = "2.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rswitch = "rswitch:main"
